--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -9,9 +9,54 @@
         %=symbols=%
 
         <div class="page">
-            <div class="page-body">
-              <h1>Components page</h1>
-            </div>
+					<div class="page-body">
+						<div class="uk-container uk-container-expand">
+							<h1>Components page</h1>
+							<ul class="uk-child-width-1-5@m uk-text-center" uk-grid>
+								<li>
+									<a href="#" class="uk-card uk-card-brand">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/mercedes-benz.png" alt="mercedes-benz">
+										</div>
+										<h5 class="uk-card-title">Mercedes-Benz</h5>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card uk-card-brand">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/vw.png" alt="Volkswagen">
+										</div>
+										<h5 class="uk-card-title">Volkswagen</h5>
+									</a>
+								</li>	
+								<li>
+									<a href="#" class="uk-card uk-card-brand">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/renault.png" alt="renault">
+										</div>
+										<h5 class="uk-card-title">Renault</h5>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card uk-card-brand">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/skoda.png" alt="skoda">
+										</div>
+										<h5 class="uk-card-title">Skoda</h5>
+									</a>
+								</li>
+								<li>
+									<a href="#"class="uk-card uk-card-brand">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/mitsubushi.png" alt="mitsubushi">
+										</div>
+										<h5 class="uk-card-title">Mitsubushi</h5>
+									</a>
+								</li>
+							</ul>
+						</div>
+						
+					</div>
         </div>
 
         <script src="%=static=%js/separate-js/svg4everybody.min.js"></script>
