add add icons add backgrounds add hero add form-range add swiper add navbar add menus add section update page

--- a/markup/pages/_template.html
+++ b/markup/pages/_template.html
@@ -8,17 +8,17 @@
     <body>
         %=symbols=%
 
-        <div class="page">
+        <div class="uk-page">
 
-            <div class="page-header">
+            <div class="uk-page-header">
                 {{> header/header}}
             </div>
 
-            <div class="page-body">
+            <div class="uk-page-body">
 
             </div>
 
-            <div class="page-footer">
+            <div class="uk-page-footer">
                 {{> footer/footer}}
             </div>
         </div>
