--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -8,15 +8,15 @@
     <body>
         %=symbols=%
 
-        <div class="page">
-					<div class="page-body">
+        <div class="uk-page">
+					<div class="uk-page-body">
 						<div class="uk-container uk-container-expand">
 							<h1>Components page</h1>
 							<ul class="uk-child-width-1-5@m uk-text-center" uk-grid>
 								<li>
 									<a href="#" class="uk-card uk-card-brand">
 										<div class="uk-card-img">
-											<img src="%=static=%img/content/mercedes-benz.png" alt="mercedes-benz">
+											<img src="%=static=%img/content/mercedes-benz.png" alt="">
 										</div>
 										<h5 class="uk-card-title">Mercedes-Benz</h5>
 									</a>
@@ -24,7 +24,7 @@
 								<li>
 									<a href="#" class="uk-card uk-card-brand">
 										<div class="uk-card-img">
-											<img src="%=static=%img/content/vw.png" alt="Volkswagen">
+											<img src="%=static=%img/content/vw.png" alt="">
 										</div>
 										<h5 class="uk-card-title">Volkswagen</h5>
 									</a>
@@ -32,7 +32,7 @@
 								<li>
 									<a href="#" class="uk-card uk-card-brand">
 										<div class="uk-card-img">
-											<img src="%=static=%img/content/renault.png" alt="renault">
+											<img src="%=static=%img/content/renault.png" alt="">
 										</div>
 										<h5 class="uk-card-title">Renault</h5>
 									</a>
@@ -40,7 +40,7 @@
 								<li>
 									<a href="#" class="uk-card uk-card-brand">
 										<div class="uk-card-img">
-											<img src="%=static=%img/content/skoda.png" alt="skoda">
+											<img src="%=static=%img/content/skoda.png" alt="">
 										</div>
 										<h5 class="uk-card-title">Skoda</h5>
 									</a>
@@ -48,7 +48,7 @@
 								<li>
 									<a href="#"class="uk-card uk-card-brand">
 										<div class="uk-card-img">
-											<img src="%=static=%img/content/mitsubushi.png" alt="mitsubushi">
+											<img src="%=static=%img/content/mitsubushi.png" alt="">
 										</div>
 										<h5 class="uk-card-title">Mitsubushi</h5>
 									</a>
