--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -5,20 +5,20 @@
         {{> head/head head.defaults}}
     </head>
 
-    <body class="page">
+    <body>
         %=symbols=%
 
-        <div class="page">
+        <div class="uk-page">
 
-            <div class="page-header">
+            <div class="uk-page-header">
                 {{> header/header}}
             </div>
 
-            <div class="page-body">
+            <div class="uk-page-body">
                 <h1>body</h1>
             </div>
 
-            <div class="page-footer">
+            <div class="uk-page-footer">
                 {{> footer/footer}}
             </div>
         </div>
