.uk-card-info and card-model

--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -12,7 +12,7 @@
 					<div class="uk-page-body">
 						<div class="uk-container uk-container-expand">
 							<h1>Components page</h1>
-							<ul class="uk-child-width-1-5@m uk-text-center" uk-grid>
+							<ul class="uk-child-width-1-5@m" uk-grid>
 								<li>
 									<a href="#" class="uk-card uk-card-brand">
 										<div class="uk-card-img">
@@ -54,8 +54,107 @@
 									</a>
 								</li>
 							</ul>
-						</div>
-						
+							<ul class="uk-child-width-1-4@m" uk-grid>
+								<li>
+									<a href="#" class="uk-card-model">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/img-1.png" alt="car-1">
+										</div>
+										<div class="uk-card-body">
+											<h6 class="uk-card-title">Новый Logan</h6>
+											<span>от 1 323 013 грн</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-model">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/img-2.png" alt="car-2">
+										</div>
+										<div class="uk-card-body">
+											<h6 class="uk-card-title">Новый Logan</h6>
+											<span>от 1 323 013 грн</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-model">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/img-3.png" alt="car-3">
+										</div>
+										<div class="uk-card-body">
+											<h6 class="uk-card-title">Новый Logan</h6>
+											<span>от 1 323 013 грн</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-model">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/img-4.png" alt="car-4">
+										</div>
+										<div class="uk-card-body">
+											<h6 class="uk-card-title">Новый Logan</h6>
+											<span>от 1 323 013 грн</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="uk-info-box" >
+								<div class="uk-row">
+									<div class="uk-col">
+										<div class="uk-card-info uk-inverse">
+											<div class="uk-card-background">
+												<img src="%=static=%img/content/img-1.jpg" alt="img">
+											</div>
+											<div class="uk-card-overlay uk-background-13"></div>
+											<div class="uk-card-foreground">
+												<div class="card-body">
+													<h2 class="uk-card-title">Страхование</h2>
+													<p>Мы предлагаем вам самые актуальные и выгодные условия на рынке автостраховани</p>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="uk-col">
+										<div class="uk-card-info uk-card-info-2">
+											<div class="uk-card-foreground">
+												<div class="card-body">
+													<h2 class="uk-card-title">Кредитование</h2>
+													<p>Cпециальные кредитные программы разработанные совместно с нашими финансовыми партнерами</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="uk-row">
+									<div class="uk-col">
+										<div class="uk-card-info">
+											<div class="uk-card-background">
+												<img src="%=static=%img/content/img-2.jpg" alt="img">
+											</div>
+											<div class="uk-card-overlay uk-background-14"></div>
+											<div class="uk-card-foreground">
+												<div class="card-body">
+													<h2 class="uk-card-title">Лизинг</h2>
+													<p>Право собственности на автомобиль переходит к клиенту сразу после окончания срока лизинга</p>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="uk-col">
+										<div class="uk-card-info uk-card-info-2">
+											<div class="uk-card-foreground">
+												<div class="card-body">
+													<h2 class="uk-card-title">Trade-in</h2>
+													<p>Вы сдаете нам свой подержанный автомобиль и уезжаете от нас на новом</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>	
 					</div>
         </div>
 
