--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -100,10 +100,10 @@
 									</a>
 								</li>
 							</ul>
-							<div class="uk-info-box" >
+							<div class="uk-info-box">
 								<div class="uk-row">
 									<div class="uk-col">
-										<div class="uk-card-info uk-inverse">
+										<div class="uk-card-info uk-light">
 											<div class="uk-card-background">
 												<img src="%=static=%img/content/img-1.jpg" alt="img">
 											</div>
@@ -148,6 +148,44 @@
 												<div class="card-body">
 													<h2 class="uk-card-title">Trade-in</h2>
 													<p>Вы сдаете нам свой подержанный автомобиль и уезжаете от нас на новом</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="uk-info-box uk-info-2 ">
+								<div class="uk-row">
+									<div class="uk-col">
+										<div class="uk-card-info uk-light">
+											<div class="uk-card-background">
+												<img src="%=static=%img/content/img-3.jpg" alt="img">
+											</div>
+										</div>
+									</div>
+									<div class="uk-col">
+										<div class="uk-card-info uk-card-info-2">
+											<div class="uk-card-foreground">
+												<div class="card-body">
+													<p>В Харькове расположен первый и единственный в Украине концептуальный центр Mercedes, спроектированный немецкими архитекторами</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="uk-row">
+									<div class="uk-col">
+										<div class="uk-card-info">
+											<div class="uk-card-background">
+												<img src="%=static=%img/content/img-4.jpg" alt="img">
+											</div>
+										</div>
+									</div>
+									<div class="uk-col">
+										<div class="uk-card-info uk-card-info-2">
+											<div class="uk-card-foreground">
+												<div class="card-body">
+													<p>А недавно открыл свои двери новый концептуальный центр Renault</p>
 												</div>
 											</div>
 										</div>
