--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -12,7 +12,7 @@
 					<div class="uk-page-body">
 						<div class="uk-container uk-container-expand">
 							<h1>Components page</h1>
-							<ul class="uk-child-width-1-5@m" uk-grid>
+							<ul class="uk-child-width-1-5@s" uk-grid>
 								<li>
 									<a href="#" class="uk-card uk-card-brand">
 										<div class="uk-card-img">
@@ -54,7 +54,7 @@
 									</a>
 								</li>
 							</ul>
-							<ul class="uk-child-width-1-4@m" uk-grid>
+							<ul class="uk-child-width-1-4@s" uk-grid>
 								<li>
 									<a href="#" class="uk-card-model">
 										<div class="uk-card-img">
@@ -192,6 +192,259 @@
 									</div>
 								</div>
 							</div>
+							<section class="uk-services uk-section">
+								<h3 class="uk-text-center">Услуги сервиса Солли Плюс</h3>
+								<ul class="uk-list-services uk-child-width-1-3@s" uk-grid>
+									<li>
+										<a href="#" class="uk-card-service">
+											<strong>Техническое	обслуживание</strong>
+										</a>
+									</li>
+									<li>
+										<a href="#" class="uk-card-service">
+											<strong>Диагностика авто</strong>
+										</a>
+									</li>
+									<li>
+										<a href="#" class="uk-card-service">
+											<strong>Дополнительное оборудование</strong>
+										</a>
+									</li>
+									<li>
+										<a href="#" class="uk-card-service">
+											<strong>Установка ГБО</strong>
+										</a>
+									</li>
+									<li>
+										<a href="#" class="uk-card-service">
+											<strong>Кузовные работы</strong>
+										</a>
+									</li>
+									<li>
+										<a href="#" class="uk-card-service">
+											<strong>Мойка</strong>
+										</a>
+									</li>
+									<li>
+										<a href="#" class="uk-card-service">
+											<strong>Озоновая обработка</strong>
+										</a>
+									</li>
+									<li>
+										<a href="#" class="uk-card-service">
+											<strong>Assistance</strong>
+										</a>
+									</li>
+								</ul>
+							</section>
+							<ul class="uk-list-stock uk-child-width-1-2@s" uk-grid>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-2 uk-light">
+										<span class="city">Renault Харьков, Полтава</span>
+										<strong>Техническая помощь на дорогах</strong>
+										<span class="date">с 1 ноября по 22 декабря 2018</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-3 uk-light">
+										<span class="city">Mitsubishi Харьков</span>
+										<strong>Ваш автомобиль Renault старше 4-х лет?</strong>
+										<span class="date">с 1 декабря 2018 по 1 февраля 2019</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-4 uk-light">
+										<span class="city">Renault Полтава</span>
+										<strong>Предложение для новых участников MY Renault</strong>
+										<span class="date">с 1 ноября по 22 декабря 2018</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-5 uk-light">
+										<span class="city">Volkswagen Харьков</span>
+										<strong>Успейте приобрести оригинальные аксессуары Volkswagen по специальному предложению от Солли Плюс</strong>
+										<span class="date">с 1 ноября по 22 декабря 2018</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-6 uk-light">
+										<span class="city">Mercedes-Benz</span>
+										<strong>Ваш автомобиль Renault старше 4-х лет?</strong>
+										<span class="date">с 1 ноября по 22 декабря 2018</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-7 uk-light">
+										<span class="city">IVECO Харьков</span>
+										<strong>Техническая помощь на дорогах</strong>
+										<span class="date">с 1 ноября по 22 декабря 2018</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-8 uk-light">
+										<span class="city">Hyundai Trucks Сервис Харьков</span>
+										<strong>Успейте приобрести оригинальные аксессуары Volkswagen по специальному предложению от Солли Плюс</strong>
+										<span class="date">с 1 ноября по 22 декабря 2018</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-9 uk-light">
+										<span class="city">Ravon Харьков</span>
+										<strong>Предложение для новых участников MY Renault</strong>
+										<span class="date">Бессрочно</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-10 uk-light">
+										<span class="city">Ford Trucks Сервис Харьков</span>
+										<strong>Успейте приобрести оригинальные аксессуары Volkswagen по специальному предложению от Солли Плюс</strong>
+										<span class="date">с 1 ноября по 22 декабря 2018</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-11 uk-light">
+										<span class="city">Ravon Харьков</span>
+										<strong>Предложение для новых участников MY Renault</strong>
+										<span class="date">с 1 декабря 2018 по 1 февраля 2019</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock uk-background-12 uk-light">
+										<span class="city">Opel Харьков</span>
+										<strong>Техническая помощь на дорогах</strong>
+										<span class="date">с 1 ноября по 22 декабря 2018</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock">
+										<span class="city">Mercedes-Benz Харьков</span>
+										<strong>Ваш автомобиль Renault старше 4-х лет?</strong>
+										<span class="date">Акция завершена</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock">
+										<span class="city">Renault Харьков</span>
+										<strong>Предложение для новых участников MY Renault</strong>
+										<span class="date">Акция завершена</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock">
+										<span class="city">Volkswagen Харьков, Запорожье</span>
+										<strong>Успейте приобрести оригинальные аксессуары Volkswagen по специальному предложению от Солли Плюс</strong>
+										<span class="date">Акция завершена</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-stock">
+										<span class="city">Mercedes-Benz Харьков</span>
+										<strong>Ваш автомобиль Renault старше 4-х лет?</strong>
+										<span class="date">Акция завершена</span>
+									</a>
+								</li>
+							</ul>
+							<ul class="uk-list-certificates uk-child-width-1-5@s" uk-grid>
+								<li>
+									<a href="#" class="uk-card-certificate">
+										<img src="%=static=%img/content/certificate-1.jpg" alt="certificate-1">
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-certificate">
+										<img src="%=static=%img/content/certificate-2.jpg" alt="certificate-2">
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-certificate">
+										<img src="%=static=%img/content/certificate-3.jpg" alt="certificate-3">
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-certificate">
+										<img src="%=static=%img/content/certificate-4.jpg" alt="certificate-4">
+									</a>
+								</li>
+								<li>
+									<a href="#" class="uk-card-certificate">
+										<img src="%=static=%img/content/certificate-5.jpg" alt="certificate-5">
+									</a>
+								</li>
+							</ul>
+							<section class="uk-news uk-section">
+								<div class="uk-list-news" uk-grid>
+									<article class="uk-news-item">
+										<a href="#" class="uk-card-news">
+											<div class="uk-card-img"><img src="%=static=%img/content/news-img-1.jpg" alt="img"></div>
+											<div class="uk-card-body">
+												<span class="date">27 августа 2017</span>
+												<h5>ŠKODA уже 14 лет является официальным партнером самой масштабной велогонки мира</h5>
+												<span class="city">Автоцентр Škoda Харьков</span>
+											</div>
+										</a>
+									</article>
+									<article class="uk-news-item">
+										<a href="#" class="uk-card-news">
+											<div class="uk-card-img"><img src="%=static=%img/content/news-img-2.jpg" alt="img"></div>
+											<div class="uk-card-body">
+												<span class="date">27 августа 2017</span>
+												<h5>Гольф турнир MercedesTrophy в Украине сделает паузу в 2018 году</h5>
+												<span class="city">Грузовики Mercedes-Benz Харьков</span>
+											</div>
+										</a>
+									</article>
+									<article class="uk-news-item">
+										<a href="#" class="uk-card-news">
+											<div class="uk-card-img"><img src="%=static=%img/content/renault-2.png" alt="img"></div>
+											<div class="uk-card-body">
+												<span class="date">27 августа 2017</span>
+												<h5>Renault объявила финалистов конкурса молодых дизайнеров «Будущее автономного транспорта в Украины»</h5>
+												<span class="city">Автоцентр Renault Полтава</span>
+											</div>
+										</a>
+									</article>
+									<article class="uk-news-item">
+										<a href="#" class="uk-card-news">
+											<div class="uk-card-img"><img src="%=static=%img/content/news-img-3.jpg" alt="img"></div>
+											<div class="uk-card-body">
+												<span class="date">27 августа 2017</span>
+												<h5>На выставке коммерческого транспорта IAA IVECO вошла в историю, полностью отказавшись от дизельных автомобилей на своем стенде</h5>
+												<span class="city">Грузовики IVECO Харьков</span>
+											</div>
+										</a>
+									</article>
+									<article class="uk-news-item">
+										<a href="#" class="uk-card-news">
+											<div class="uk-card-img"><img src="%=static=%img/content/news-img-4.jpg" alt="img"></div>
+											<div class="uk-card-body">
+												<span class="date">27 августа 2017</span>
+												<h5>Пикапы Mitsubishi: 40 лет успеха во всем мире</h5>
+												<span class="city">Автоцентр Mitsubishi Харьков</span>
+											</div>
+										</a>
+									</article>
+									<article class="uk-news-item">
+										<a href="#" class="uk-card-news">
+											<div class="uk-card-img"><img src="%=static=%img/content/news-img-5.jpg" alt="img"></div>
+											<div class="uk-card-body">
+												<span class="date">27 августа 2017</span>
+												<h5>Восставший из, или какой смысл в «cамом дешевом автомобиле с автоматом»?</h5>
+												<span class="city">Автоцентр Ravon Харьков</span>
+											</div>
+										</a>
+									</article>
+									<article class="uk-news-item">
+										<a href="#" class="uk-card-news">
+											<div class="uk-card-img"><img src="%=static=%img/content/news-img-6.jpg" alt="img"></div>
+											<div class="uk-card-body">
+												<span class="date">27 августа 2017</span>
+												<h5>Компания Volkswagen впервые в истории создает кроссовер, в котором не к чему придраться</h5>
+												<span class="city">Автоцентр Volkswagen Полтава</span>
+											</div>
+										</a>
+									</article>
+								</div>
+							</section>
 						</div>	
 					</div>
         </div>
