--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -378,7 +378,7 @@
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-1.jpg" alt="img"></div>
 											<div class="uk-card-body">
 												<span class="date">27 августа 2017</span>
-												<h5>ŠKODA уже 14 лет является официальным партнером самой масштабной велогонки мира</h5>
+												<h5 class="uk-card-title">ŠKODA уже 14 лет является официальным партнером самой масштабной велогонки мира</h5>
 												<span class="city">Автоцентр Škoda Харьков</span>
 											</div>
 										</a>
@@ -388,7 +388,7 @@
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-2.jpg" alt="img"></div>
 											<div class="uk-card-body">
 												<span class="date">27 августа 2017</span>
-												<h5>Гольф турнир MercedesTrophy в Украине сделает паузу в 2018 году</h5>
+												<h5 class="uk-card-title">Гольф турнир MercedesTrophy в Украине сделает паузу в 2018 году</h5>
 												<span class="city">Грузовики Mercedes-Benz Харьков</span>
 											</div>
 										</a>
@@ -398,7 +398,7 @@
 											<div class="uk-card-img"><img src="%=static=%img/content/renault-2.png" alt="img"></div>
 											<div class="uk-card-body">
 												<span class="date">27 августа 2017</span>
-												<h5>Renault объявила финалистов конкурса молодых дизайнеров «Будущее автономного транспорта в Украины»</h5>
+												<h5 class="uk-card-title">Renault объявила финалистов конкурса молодых дизайнеров «Будущее автономного транспорта в Украины»</h5>
 												<span class="city">Автоцентр Renault Полтава</span>
 											</div>
 										</a>
@@ -408,7 +408,7 @@
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-3.jpg" alt="img"></div>
 											<div class="uk-card-body">
 												<span class="date">27 августа 2017</span>
-												<h5>На выставке коммерческого транспорта IAA IVECO вошла в историю, полностью отказавшись от дизельных автомобилей на своем стенде</h5>
+												<h5 class="uk-card-title">На выставке коммерческого транспорта IAA IVECO вошла в историю, полностью отказавшись от дизельных автомобилей на своем стенде</h5>
 												<span class="city">Грузовики IVECO Харьков</span>
 											</div>
 										</a>
@@ -418,7 +418,7 @@
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-4.jpg" alt="img"></div>
 											<div class="uk-card-body">
 												<span class="date">27 августа 2017</span>
-												<h5>Пикапы Mitsubishi: 40 лет успеха во всем мире</h5>
+												<h5 class="uk-card-title">Пикапы Mitsubishi: 40 лет успеха во всем мире</h5>
 												<span class="city">Автоцентр Mitsubishi Харьков</span>
 											</div>
 										</a>
@@ -428,7 +428,7 @@
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-5.jpg" alt="img"></div>
 											<div class="uk-card-body">
 												<span class="date">27 августа 2017</span>
-												<h5>Восставший из, или какой смысл в «cамом дешевом автомобиле с автоматом»?</h5>
+												<h5 class="uk-card-title">Восставший из, или какой смысл в «cамом дешевом автомобиле с автоматом»?</h5>
 												<span class="city">Автоцентр Ravon Харьков</span>
 											</div>
 										</a>
@@ -438,7 +438,7 @@
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-6.jpg" alt="img"></div>
 											<div class="uk-card-body">
 												<span class="date">27 августа 2017</span>
-												<h5>Компания Volkswagen впервые в истории создает кроссовер, в котором не к чему придраться</h5>
+												<h5 class="uk-card-title">Компания Volkswagen впервые в истории создает кроссовер, в котором не к чему придраться</h5>
 												<span class="city">Автоцентр Volkswagen Полтава</span>
 											</div>
 										</a>
