cards news partner stock

--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -194,7 +194,7 @@
 							</div>
 							<section class="uk-services uk-section">
 								<h3 class="uk-text-center">Услуги сервиса Солли Плюс</h3>
-								<ul class="uk-list-services uk-child-width-1-3@s" uk-grid>
+								<ul class="uk-list-services uk-child-width-1-3@s uk-grid-match" uk-grid>
 									<li>
 										<a href="#" class="uk-card-service">
 											<strong>Техническое	обслуживание</strong>
@@ -316,28 +316,28 @@
 									</a>
 								</li>
 								<li>
-									<a href="#" class="uk-card-stock">
+									<a href="#" class="uk-card-stock uk-disabled">
 										<span class="city">Mercedes-Benz Харьков</span>
 										<strong>Ваш автомобиль Renault старше 4-х лет?</strong>
 										<span class="date">Акция завершена</span>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="uk-card-stock">
+									<a href="#" class="uk-card-stock uk-disabled">
 										<span class="city">Renault Харьков</span>
 										<strong>Предложение для новых участников MY Renault</strong>
 										<span class="date">Акция завершена</span>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="uk-card-stock">
+									<a href="#" class="uk-card-stock uk-disabled">
 										<span class="city">Volkswagen Харьков, Запорожье</span>
 										<strong>Успейте приобрести оригинальные аксессуары Volkswagen по специальному предложению от Солли Плюс</strong>
 										<span class="date">Акция завершена</span>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="uk-card-stock">
+									<a href="#" class="uk-card-stock uk-disabled">
 										<span class="city">Mercedes-Benz Харьков</span>
 										<strong>Ваш автомобиль Renault старше 4-х лет?</strong>
 										<span class="date">Акция завершена</span>
@@ -372,14 +372,16 @@
 								</li>
 							</ul>
 							<section class="uk-news uk-section">
-								<div class="uk-list-news" uk-grid>
+								<div class="uk-list-news uk-grid-match" uk-grid>
 									<article class="uk-news-item">
 										<a href="#" class="uk-card-news">
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-1.jpg" alt="img"></div>
 											<div class="uk-card-body">
-												<span class="date">27 августа 2017</span>
-												<h5 class="uk-card-title">ŠKODA уже 14 лет является официальным партнером самой масштабной велогонки мира</h5>
-												<span class="city">Автоцентр Škoda Харьков</span>
+												<div class="uk-body-top">
+													<span class="uk-card-date">27 августа 2017</span>
+													<h5 class="uk-card-title">ŠKODA уже 14 лет является официальным партнером самой масштабной велогонки мира</h5>
+												</div>
+												<span class="uk-card-city">Автоцентр Škoda Харьков</span>
 											</div>
 										</a>
 									</article>
@@ -387,9 +389,11 @@
 										<a href="#" class="uk-card-news">
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-2.jpg" alt="img"></div>
 											<div class="uk-card-body">
-												<span class="date">27 августа 2017</span>
-												<h5 class="uk-card-title">Гольф турнир MercedesTrophy в Украине сделает паузу в 2018 году</h5>
-												<span class="city">Грузовики Mercedes-Benz Харьков</span>
+												<div class="uk-body-top">
+													<span class="uk-card-date">27 августа 2017</span>
+													<h5 class="uk-card-title">Гольф турнир MercedesTrophy в Украине сделает паузу в 2018 году</h5>
+												</div>
+												<span class="uk-card-city">Грузовики Mercedes-Benz Харьков</span>
 											</div>
 										</a>
 									</article>
@@ -397,9 +401,11 @@
 										<a href="#" class="uk-card-news">
 											<div class="uk-card-img"><img src="%=static=%img/content/renault-2.png" alt="img"></div>
 											<div class="uk-card-body">
-												<span class="date">27 августа 2017</span>
-												<h5 class="uk-card-title">Renault объявила финалистов конкурса молодых дизайнеров «Будущее автономного транспорта в Украины»</h5>
-												<span class="city">Автоцентр Renault Полтава</span>
+												<div class="uk-body-top">
+													<span class="uk-card-date">27 августа 2017</span>
+													<h5 class="uk-card-title">Renault объявила финалистов конкурса молодых дизайнеров «Будущее автономного транспорта в Украины»</h5>
+												</div>
+												<span class="uk-card-city">Автоцентр Renault Полтава</span>
 											</div>
 										</a>
 									</article>
@@ -407,9 +413,11 @@
 										<a href="#" class="uk-card-news">
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-3.jpg" alt="img"></div>
 											<div class="uk-card-body">
-												<span class="date">27 августа 2017</span>
-												<h5 class="uk-card-title">На выставке коммерческого транспорта IAA IVECO вошла в историю, полностью отказавшись от дизельных автомобилей на своем стенде</h5>
-												<span class="city">Грузовики IVECO Харьков</span>
+												<div class="uk-body-top">
+													<span class="uk-card-date">27 августа 2017</span>
+													<h5 class="uk-card-title">На выставке коммерческого транспорта IAA IVECO вошла в историю, полностью отказавшись от дизельных автомобилей на своем стенде</h5>
+												</div>
+												<span class="uk-card-city">Грузовики IVECO Харьков</span>
 											</div>
 										</a>
 									</article>
@@ -417,9 +425,11 @@
 										<a href="#" class="uk-card-news">
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-4.jpg" alt="img"></div>
 											<div class="uk-card-body">
-												<span class="date">27 августа 2017</span>
-												<h5 class="uk-card-title">Пикапы Mitsubishi: 40 лет успеха во всем мире</h5>
-												<span class="city">Автоцентр Mitsubishi Харьков</span>
+												<div class="uk-body-top">
+													<span class="uk-card-date">27 августа 2017</span>
+													<h5 class="uk-card-title">Пикапы Mitsubishi: 40 лет успеха во всем мире</h5>
+												</div>
+												<span class="uk-card-city">Автоцентр Mitsubishi Харьков</span>
 											</div>
 										</a>
 									</article>
@@ -427,9 +437,11 @@
 										<a href="#" class="uk-card-news">
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-5.jpg" alt="img"></div>
 											<div class="uk-card-body">
-												<span class="date">27 августа 2017</span>
-												<h5 class="uk-card-title">Восставший из, или какой смысл в «cамом дешевом автомобиле с автоматом»?</h5>
-												<span class="city">Автоцентр Ravon Харьков</span>
+												<div class="uk-body-top">
+													<span class="uk-card-date">27 августа 2017</span>
+													<h5 class="uk-card-title">Восставший из, или какой смысл в «cамом дешевом автомобиле с автоматом»?</h5>
+												</div>
+												<span class="uk-card-city">Автоцентр Ravon Харьков</span>
 											</div>
 										</a>
 									</article>
@@ -437,14 +449,113 @@
 										<a href="#" class="uk-card-news">
 											<div class="uk-card-img"><img src="%=static=%img/content/news-img-6.jpg" alt="img"></div>
 											<div class="uk-card-body">
-												<span class="date">27 августа 2017</span>
-												<h5 class="uk-card-title">Компания Volkswagen впервые в истории создает кроссовер, в котором не к чему придраться</h5>
-												<span class="city">Автоцентр Volkswagen Полтава</span>
+												<div class="uk-body-top">
+													<span class="uk-card-date">27 августа 2017</span>
+													<h5 class="uk-card-title">Компания Volkswagen впервые в истории создает кроссовер, в котором не к чему придраться</h5>
+												</div>
+												<span class="uk-card-city">Автоцентр Volkswagen Полтава</span>
 											</div>
 										</a>
 									</article>
 								</div>
 							</section>
+							<div class="uk-list-cars uk-child-width-1-3@s uk-grid-match" uk-grid>
+								<article class="uk-list-item">
+									<a href="#" class="uk-card-car">
+										<div class="uk-card-img"><img src="%=static=%img/content/car-img-1.jpg" alt="car"></div>
+										<div class="uk-card-body">
+											<h6 class="uk-card-title">Volkswagen New Touareg 3.6 TDI Comfortline AT 2018</h6>
+											<div class="uk-price-holder">
+												<span class="uk-card-price">16 360 000 грн</span>
+												<span class="uk-card-real-price"><strike>13 360 000 грн</strike></span>
+											</div>
+										</div>
+									</a>
+								</article>
+								<article class="uk-list-item">
+									<a href="#" class="uk-card-car">
+										<div class="uk-card-img"><img src="%=static=%img/content/car-img-2.jpg" alt="car"></div>
+										<div class="uk-card-body">
+											<h6 class="uk-card-title">Skoda Superb 2.0 TSI Active AT 2017</h6>
+											<div class="uk-price-holder">
+												<span class="uk-card-price">16 360 000 грн</span>
+											</div>
+										</div>
+									</a>
+								</article>
+								<article class="uk-list-item">
+									<a href="#" class="uk-card-car">
+										<div class="uk-card-img"><img src="%=static=%img/content/car-img-3.jpg" alt="car"></div>
+										<div class="uk-card-body">
+											<h6 class="uk-card-title">Mercedes-Benz A-Class 200 AT 4matic BRABUS 2018</h6>
+											<div class="uk-price-holder">
+												<span class="uk-card-price">16 360 000 грн</span>
+											</div>
+										</div>
+									</a>
+								</article>
+								<article class="uk-list-item">
+									<a href="#" class="uk-card-car">
+										<div class="uk-card-img"><img src="%=static=%img/content/car-img-4.jpg" alt="car"></div>
+										<div class="uk-card-body">
+											<h6 class="uk-card-title">Ravon R2 AT 2017</h6>
+											<div class="uk-price-holder">
+												<span class="uk-card-price">16 360 000 грн</span>
+											</div>
+										</div>
+									</a>
+								</article>
+								<article class="uk-list-item">
+									<a href="#" class="uk-card-car">
+										<div class="uk-card-img"><img src="%=static=%img/content/car-img-5.jpg" alt="car"></div>
+										<div class="uk-card-body">
+											<h6 class="uk-card-title">Volkswagen Golf 2.0 TDI R-line</h6>
+											<div class="uk-price-holder">
+												<span class="uk-card-price">16 360 000 грн</span>
+											</div>
+										</div>
+									</a>
+								</article>
+								<article class="uk-list-item">
+									<a href="#" class="uk-card-car">
+										<div class="uk-card-img"><img src="%=static=%img/content/car-img-6.jpg" alt="car"></div>
+										<div class="uk-card-body">
+											<h6 class="uk-card-title">Opel Insignia AT 2017Mercedes-Benz A-Class 200 AT 4matic BRABUS 2018</h6>
+											<div class="uk-price-holder">
+												<span class="uk-card-price">16 360 000 грн</span>
+												<span class="uk-card-real-price"><strike>13 360 000 грн</strike></span>
+											</div>
+										</div>
+									</a>
+								</article>
+							</div>
+							<ul class="uk-list-partners uk-child-width-1-5@s uk-grid-match" uk-grid>
+								<li class="uk-list-item">
+									<div class="uk-card-partner">
+										<img src="%=static=%img/content/partner-logo-2.png" alt="partner">
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-partner">
+										<img src="%=static=%img/content/partner-logo-1.png" alt="partner">
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-partner">
+										<img src="%=static=%img/content/partner-logo-3.png" alt="partner">
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-partner">
+										<img src="%=static=%img/content/partner-logo-5.png" alt="partner">
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-partner">
+										<img src="%=static=%img/content/partner-logo-4.png" alt="partner">
+									</div>
+								</li>
+							</ul>
 						</div>	
 					</div>
         </div>
